@@ -1,3 +1,9 @@
+2002-11-21  Richard Henderson  <rth@redhat.com>
+
+        * elflink.h (elf_link_add_object_symbols): Don't overwrite the
+        arch's st_other bits when merging visibilities.
+        (elf_link_output_extsym): Tidy clearing of visibility field.
+
 2002-11-14  David O'Brien  <obrien@FreeBSD.org>
 
 	Merge from mainline:
